--- a/doProject/infrastructure/pom.xml
+++ b/doProject/infrastructure/pom.xml
@@ -3,15 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.doProject</groupId>
+        <artifactId>doProject</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
-    <groupId>org.doProject</groupId>
-    <artifactId>doProject</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <modules>
-        <module>core</module>
-        <module>infrastructure</module>
-    </modules>
+    <artifactId>infrastructure</artifactId>
 
     <properties>
         <maven.compiler.source>22</maven.compiler.source>
