feat: reorganized all pom.xml all at once + deleted project before hex-architecture

--- a/doProject/infrastructure/pom.xml
+++ b/doProject/infrastructure/pom.xml
@@ -23,6 +23,11 @@
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.46.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.doProject</groupId>
+            <artifactId>common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
