--- a/doProject/tests/pom.xml
+++ b/doProject/tests/pom.xml
@@ -21,6 +21,12 @@
 
         <dependency>
             <groupId>org.doProject</groupId>
+            <artifactId>common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.doProject</groupId>
             <artifactId>infrastructure</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
