--- a/.github/workflows/doProjectCI.yml
+++ b/.github/workflows/doProjectCI.yml
@@ -29,7 +29,5 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: |
-        cd 
-        doProject/tests/src/test/java/org/doProject/tests
-        mvn --batch-mode --update-snapshots verify
-
+        cd doProject  # Navigate to the project root
+        mvn --batch-mode --update-snapshots verify -f tests/pom.xml
