refactor: deleted common module -> moved classes into domain core

--- a/doProject/infrastructure/pom.xml
+++ b/doProject/infrastructure/pom.xml
@@ -25,7 +25,7 @@
         </dependency>
         <dependency>
             <groupId>org.doProject</groupId>
-            <artifactId>common</artifactId>
+            <artifactId>core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
