--- a/doProject/tests/pom.xml
+++ b/doProject/tests/pom.xml
@@ -21,7 +21,7 @@
 
         <dependency>
             <groupId>org.doProject</groupId>
-            <artifactId>common</artifactId>
+            <artifactId>core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
